// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox component should render correctly when is checked 1`] = `
Array [
  ".sharedRippleEffect-0-2-7 {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
}
.wrapper-0-2-8 {
  height: fit-content;
  outline: none;
  position: relative;
}
.wrapper-0-2-8:focus:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  opacity: 0.16;
  z-index: -1;
  position: absolute;
}
.wrapper-0-2-8:hover:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
}
.ripple-0-2-9 {
  opacity: 0;
  position: absolute;
  transform: translate(-50%, -50%);
  border-radius: 50%;
}
.rippleContainer-0-2-10 {
  inset: 0;
  position: absolute;
}
.rippleActive-0-2-11 {
  z-index: 99;
}
@keyframes keyframes-ripple-0-2-12 {
  0% {
    transform: translate(-50%, -50%) scale(0);
  }
  75% {
    opacity: 0.12;
    transform: translate(-50%, -50%) scale(1);
  }
  100% {
    opacity: 0;
    z-index: 0;
  }
}
  .wrapper-d0-0-2-13 {
    cursor: pointer;
    display: inline-block;
    align-self: start;
  }
  .wrapper-d0-0-2-13:focus:after {
    background-color: #f4ab34;
    border-radius: none;
  }
  .wrapper-d0-0-2-13:hover:after {
    background-color: #f4ab34;
    opacity: 0.16;
    border-radius: none;
  }
  .ripple-d1-0-2-14 {
    background-color: #f4ab34;
    height: 0;
    left: 50%;
    top: 50%;
    transition: scale opacity 500ms;
    width: 0;
  }
  .rippleContainer-d2-0-2-15 {
    border-radius: 4px;
  }
  .rippleActive-d3-0-2-16 {
    animation: keyframes-ripple-0-2-12 500ms;
  }
  .container-0-2-1 {
    display: flex;
    align-items: center;
  }
  .wrapper-0-2-2 {
    width: 40px;
    height: 40px;
    display: flex;
    align-items: center;
    justify-content: center;
  }
  .checkbox-0-2-3 {
    width: 18px;
    border: 2px solid #737373;
    cursor: pointer;
    height: 18px;
    margin: 0;
    display: inline-block;
    position: relative;
    appearance: none;
    border-radius: 2px;
  }
  .checkbox-0-2-3:focus {
    outline: none;
  }
  .checkbox-0-2-3:disabled {
    border: 2px solid #8c8c8c;
    cursor: default;
  }
  .checkbox-0-2-3:checked {
    color: #ffffff;
  }
  .checkbox-0-2-3:checked:after {
    top: 50%;
    left: 50%;
    display: block;
    position: absolute;
    font-size: 18px;
    transform: translate(-50%, -50%);
    text-align: center;
    font-family: natds-icons;
  }
  .checkbox-0-2-3:checked:disabled {
    border: 2px solid #8c8c8c;
    background-color: #8c8c8c;
  }
  .labelText-0-2-4 {
    font-size: 14px;
    font-family: Roboto, Arial;
    font-weight: 400;
    line-height: 1.5;
    letter-spacing: 0.22px;
  }
  .checkbox-d0-0-2-5 {  }
  .checkbox-d0-0-2-5:checked {
    background-color: #f4ab34;
    border: 2px solid #f4ab34;
  }
  .checkbox-d0-0-2-5:checked:after {
    content: \\"\\";
  }
  .labelText-d1-0-2-6 {
    color: #363636;
  }",
  <div>
    <div
      class=" container-0-2-1 Checkbox-gaya"
    >
      <div
        class="wrapper-0-2-8 wrapper-d0-0-2-13"
        data-testid="ripple-wrapper"
        tabindex="0"
      >
        <div
          class="rippleContainer-0-2-10 rippleContainer-d2-0-2-15"
        >
          <div
            class="ripple-0-2-9 ripple-d1-0-2-14 "
            data-testid="ripple-animation"
          />
        </div>
        <div
          class="wrapper-0-2-2"
        >
          <input
            checked=""
            class="checkbox-0-2-3 checkbox-d0-0-2-5"
            data-testid="ds-checkbox-any"
            id="any"
            type="checkbox"
            value="any value"
          />
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Checkbox component should render correctly when is disabled 1`] = `
Array [
  ".sharedRippleEffect-0-2-7 {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
}
.wrapper-0-2-8 {
  height: fit-content;
  outline: none;
  position: relative;
}
.wrapper-0-2-8:focus:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  opacity: 0.16;
  z-index: -1;
  position: absolute;
}
.wrapper-0-2-8:hover:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
}
.ripple-0-2-9 {
  opacity: 0;
  position: absolute;
  transform: translate(-50%, -50%);
  border-radius: 50%;
}
.rippleContainer-0-2-10 {
  inset: 0;
  position: absolute;
}
.rippleActive-0-2-11 {
  z-index: 99;
}
@keyframes keyframes-ripple-0-2-12 {
  0% {
    transform: translate(-50%, -50%) scale(0);
  }
  75% {
    opacity: 0.12;
    transform: translate(-50%, -50%) scale(1);
  }
  100% {
    opacity: 0;
    z-index: 0;
  }
}
  .wrapper-d0-0-2-13 {
    cursor: default;
    display: inline-block;
    align-self: start;
  }
  .wrapper-d0-0-2-13:focus:after {
    border-radius: none;
  }
  .wrapper-d0-0-2-13:hover:after {
    background-color: #111111;
    opacity: 0;
    border-radius: none;
  }
  .ripple-d1-0-2-14 {
    background-color: #111111;
    height: 0;
    left: 50%;
    top: 50%;
    transition: scale opacity 500ms;
    width: 0;
  }
  .rippleContainer-d2-0-2-15 {
    border-radius: 4px;
  }
  .rippleActive-d3-0-2-16 {
    animation: keyframes-ripple-0-2-12 500ms;
  }
  .container-0-2-1 {
    display: flex;
    align-items: center;
  }
  .wrapper-0-2-2 {
    width: 40px;
    height: 40px;
    display: flex;
    align-items: center;
    justify-content: center;
  }
  .checkbox-0-2-3 {
    width: 18px;
    border: 2px solid #737373;
    cursor: pointer;
    height: 18px;
    margin: 0;
    display: inline-block;
    position: relative;
    appearance: none;
    border-radius: 2px;
  }
  .checkbox-0-2-3:focus {
    outline: none;
  }
  .checkbox-0-2-3:disabled {
    border: 2px solid #8c8c8c;
    cursor: default;
  }
  .checkbox-0-2-3:checked {
    color: #ffffff;
  }
  .checkbox-0-2-3:checked:after {
    top: 50%;
    left: 50%;
    display: block;
    position: absolute;
    font-size: 18px;
    transform: translate(-50%, -50%);
    text-align: center;
    font-family: natds-icons;
  }
  .checkbox-0-2-3:checked:disabled {
    border: 2px solid #8c8c8c;
    background-color: #8c8c8c;
  }
  .labelText-0-2-4 {
    font-size: 14px;
    font-family: Roboto, Arial;
    font-weight: 400;
    line-height: 1.5;
    letter-spacing: 0.22px;
  }
  .checkbox-d0-0-2-5 {  }
  .checkbox-d0-0-2-5:checked {
    background-color: #f4ab34;
    border: 2px solid #f4ab34;
  }
  .checkbox-d0-0-2-5:checked:after {
    content: \\"\\";
  }
  .labelText-d1-0-2-6 {
    color: #8c8c8c;
  }",
  <div>
    <div
      class=" container-0-2-1 Checkbox-gaya"
    >
      <div
        class="wrapper-0-2-8 wrapper-d0-0-2-13"
        data-testid="ripple-wrapper"
        tabindex="0"
      >
        <div
          class="rippleContainer-0-2-10 rippleContainer-d2-0-2-15"
        >
          <div
            class="ripple-0-2-9 ripple-d1-0-2-14 "
            data-testid="ripple-animation"
          />
        </div>
        <div
          class="wrapper-0-2-2"
        >
          <input
            class="checkbox-0-2-3 checkbox-d0-0-2-5"
            data-testid="ds-checkbox-any"
            disabled=""
            id="any"
            type="checkbox"
            value="any value"
          />
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Checkbox component should render correctly when is indeterminate 1`] = `
Array [
  ".sharedRippleEffect-0-2-7 {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
}
.wrapper-0-2-8 {
  height: fit-content;
  outline: none;
  position: relative;
}
.wrapper-0-2-8:focus:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  opacity: 0.16;
  z-index: -1;
  position: absolute;
}
.wrapper-0-2-8:hover:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
}
.ripple-0-2-9 {
  opacity: 0;
  position: absolute;
  transform: translate(-50%, -50%);
  border-radius: 50%;
}
.rippleContainer-0-2-10 {
  inset: 0;
  position: absolute;
}
.rippleActive-0-2-11 {
  z-index: 99;
}
@keyframes keyframes-ripple-0-2-12 {
  0% {
    transform: translate(-50%, -50%) scale(0);
  }
  75% {
    opacity: 0.12;
    transform: translate(-50%, -50%) scale(1);
  }
  100% {
    opacity: 0;
    z-index: 0;
  }
}
  .wrapper-d0-0-2-13 {
    cursor: pointer;
    display: inline-block;
    align-self: start;
  }
  .wrapper-d0-0-2-13:focus:after {
    background-color: #111111;
    border-radius: none;
  }
  .wrapper-d0-0-2-13:hover:after {
    background-color: #111111;
    opacity: 0.16;
    border-radius: none;
  }
  .ripple-d1-0-2-14 {
    background-color: #111111;
    height: 0;
    left: 50%;
    top: 50%;
    transition: scale opacity 500ms;
    width: 0;
  }
  .rippleContainer-d2-0-2-15 {
    border-radius: 4px;
  }
  .rippleActive-d3-0-2-16 {
    animation: keyframes-ripple-0-2-12 500ms;
  }
  .container-0-2-1 {
    display: flex;
    align-items: center;
  }
  .wrapper-0-2-2 {
    width: 40px;
    height: 40px;
    display: flex;
    align-items: center;
    justify-content: center;
  }
  .checkbox-0-2-3 {
    width: 18px;
    border: 2px solid #737373;
    cursor: pointer;
    height: 18px;
    margin: 0;
    display: inline-block;
    position: relative;
    appearance: none;
    border-radius: 2px;
  }
  .checkbox-0-2-3:focus {
    outline: none;
  }
  .checkbox-0-2-3:disabled {
    border: 2px solid #8c8c8c;
    cursor: default;
  }
  .checkbox-0-2-3:checked {
    color: #ffffff;
  }
  .checkbox-0-2-3:checked:after {
    top: 50%;
    left: 50%;
    display: block;
    position: absolute;
    font-size: 18px;
    transform: translate(-50%, -50%);
    text-align: center;
    font-family: natds-icons;
  }
  .checkbox-0-2-3:checked:disabled {
    border: 2px solid #8c8c8c;
    background-color: #8c8c8c;
  }
  .labelText-0-2-4 {
    font-size: 14px;
    font-family: Roboto, Arial;
    font-weight: 400;
    line-height: 1.5;
    letter-spacing: 0.22px;
  }
  .checkbox-d0-0-2-5 {  }
  .checkbox-d0-0-2-5:checked {
    background-color: #f4ab34;
    border: 2px solid #f4ab34;
  }
  .checkbox-d0-0-2-5:checked:after {
    content: \\"\\";
  }
  .labelText-d1-0-2-6 {
    color: #363636;
  }",
  <div>
    <div
      class=" container-0-2-1 Checkbox-gaya"
    >
      <div
        class="wrapper-0-2-8 wrapper-d0-0-2-13"
        data-testid="ripple-wrapper"
        tabindex="0"
      >
        <div
          class="rippleContainer-0-2-10 rippleContainer-d2-0-2-15"
        >
          <div
            class="ripple-0-2-9 ripple-d1-0-2-14 "
            data-testid="ripple-animation"
          />
        </div>
        <div
          class="wrapper-0-2-2"
        >
          <input
            class="checkbox-0-2-3 checkbox-d0-0-2-5"
            data-testid="ds-checkbox-any"
            id="any"
            type="checkbox"
            value="any value"
          />
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Checkbox component should render correctly with default props 1`] = `
Array [
  ".sharedRippleEffect-0-2-7 {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
}
.wrapper-0-2-8 {
  height: fit-content;
  outline: none;
  position: relative;
}
.wrapper-0-2-8:focus:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  opacity: 0.16;
  z-index: -1;
  position: absolute;
}
.wrapper-0-2-8:hover:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
}
.ripple-0-2-9 {
  opacity: 0;
  position: absolute;
  transform: translate(-50%, -50%);
  border-radius: 50%;
}
.rippleContainer-0-2-10 {
  inset: 0;
  position: absolute;
}
.rippleActive-0-2-11 {
  z-index: 99;
}
@keyframes keyframes-ripple-0-2-12 {
  0% {
    transform: translate(-50%, -50%) scale(0);
  }
  75% {
    opacity: 0.12;
    transform: translate(-50%, -50%) scale(1);
  }
  100% {
    opacity: 0;
    z-index: 0;
  }
}
  .wrapper-d0-0-2-13 {
    cursor: pointer;
    display: inline-block;
    align-self: start;
  }
  .wrapper-d0-0-2-13:focus:after {
    background-color: #111111;
    border-radius: none;
  }
  .wrapper-d0-0-2-13:hover:after {
    background-color: #111111;
    opacity: 0.16;
    border-radius: none;
  }
  .ripple-d1-0-2-14 {
    background-color: #111111;
    height: 0;
    left: 50%;
    top: 50%;
    transition: scale opacity 500ms;
    width: 0;
  }
  .rippleContainer-d2-0-2-15 {
    border-radius: 4px;
  }
  .rippleActive-d3-0-2-16 {
    animation: keyframes-ripple-0-2-12 500ms;
  }
  .container-0-2-1 {
    display: flex;
    align-items: center;
  }
  .wrapper-0-2-2 {
    width: 40px;
    height: 40px;
    display: flex;
    align-items: center;
    justify-content: center;
  }
  .checkbox-0-2-3 {
    width: 18px;
    border: 2px solid #737373;
    cursor: pointer;
    height: 18px;
    margin: 0;
    display: inline-block;
    position: relative;
    appearance: none;
    border-radius: 2px;
  }
  .checkbox-0-2-3:focus {
    outline: none;
  }
  .checkbox-0-2-3:disabled {
    border: 2px solid #8c8c8c;
    cursor: default;
  }
  .checkbox-0-2-3:checked {
    color: #ffffff;
  }
  .checkbox-0-2-3:checked:after {
    top: 50%;
    left: 50%;
    display: block;
    position: absolute;
    font-size: 18px;
    transform: translate(-50%, -50%);
    text-align: center;
    font-family: natds-icons;
  }
  .checkbox-0-2-3:checked:disabled {
    border: 2px solid #8c8c8c;
    background-color: #8c8c8c;
  }
  .labelText-0-2-4 {
    font-size: 14px;
    font-family: Roboto, Arial;
    font-weight: 400;
    line-height: 1.5;
    letter-spacing: 0.22px;
  }
  .checkbox-d0-0-2-5 {  }
  .checkbox-d0-0-2-5:checked {
    background-color: #f4ab34;
    border: 2px solid #f4ab34;
  }
  .checkbox-d0-0-2-5:checked:after {
    content: \\"\\";
  }
  .labelText-d1-0-2-6 {
    color: #363636;
  }",
  <div>
    <div
      class=" container-0-2-1 Checkbox-gaya"
    >
      <div
        class="wrapper-0-2-8 wrapper-d0-0-2-13"
        data-testid="ripple-wrapper"
        tabindex="0"
      >
        <div
          class="rippleContainer-0-2-10 rippleContainer-d2-0-2-15"
        >
          <div
            class="ripple-0-2-9 ripple-d1-0-2-14 "
            data-testid="ripple-animation"
          />
        </div>
        <div
          class="wrapper-0-2-2"
        >
          <input
            class="checkbox-0-2-3 checkbox-d0-0-2-5"
            data-testid="ds-checkbox-any"
            id="any"
            type="checkbox"
            value="any value"
          />
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Checkbox component should render correctly with label 1`] = `
Array [
  ".sharedRippleEffect-0-2-7 {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
}
.wrapper-0-2-8 {
  height: fit-content;
  outline: none;
  position: relative;
}
.wrapper-0-2-8:focus:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  opacity: 0.16;
  z-index: -1;
  position: absolute;
}
.wrapper-0-2-8:hover:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
}
.ripple-0-2-9 {
  opacity: 0;
  position: absolute;
  transform: translate(-50%, -50%);
  border-radius: 50%;
}
.rippleContainer-0-2-10 {
  inset: 0;
  position: absolute;
}
.rippleActive-0-2-11 {
  z-index: 99;
}
@keyframes keyframes-ripple-0-2-12 {
  0% {
    transform: translate(-50%, -50%) scale(0);
  }
  75% {
    opacity: 0.12;
    transform: translate(-50%, -50%) scale(1);
  }
  100% {
    opacity: 0;
    z-index: 0;
  }
}
  .wrapper-d0-0-2-13 {
    cursor: pointer;
    display: inline-block;
    align-self: start;
  }
  .wrapper-d0-0-2-13:focus:after {
    background-color: #111111;
    border-radius: none;
  }
  .wrapper-d0-0-2-13:hover:after {
    background-color: #111111;
    opacity: 0.16;
    border-radius: none;
  }
  .ripple-d1-0-2-14 {
    background-color: #111111;
    height: 0;
    left: 50%;
    top: 50%;
    transition: scale opacity 500ms;
    width: 0;
  }
  .rippleContainer-d2-0-2-15 {
    border-radius: 4px;
  }
  .rippleActive-d3-0-2-16 {
    animation: keyframes-ripple-0-2-12 500ms;
  }
  .labelContainer-0-2-17 {
    color: #111111;
    font-family: \\"Roboto\\", Arial;
  }
  .container-0-2-1 {
    display: flex;
    align-items: center;
  }
  .wrapper-0-2-2 {
    width: 40px;
    height: 40px;
    display: flex;
    align-items: center;
    justify-content: center;
  }
  .checkbox-0-2-3 {
    width: 18px;
    border: 2px solid #737373;
    cursor: pointer;
    height: 18px;
    margin: 0;
    display: inline-block;
    position: relative;
    appearance: none;
    border-radius: 2px;
  }
  .checkbox-0-2-3:focus {
    outline: none;
  }
  .checkbox-0-2-3:disabled {
    border: 2px solid #8c8c8c;
    cursor: default;
  }
  .checkbox-0-2-3:checked {
    color: #ffffff;
  }
  .checkbox-0-2-3:checked:after {
    top: 50%;
    left: 50%;
    display: block;
    position: absolute;
    font-size: 18px;
    transform: translate(-50%, -50%);
    text-align: center;
    font-family: natds-icons;
  }
  .checkbox-0-2-3:checked:disabled {
    border: 2px solid #8c8c8c;
    background-color: #8c8c8c;
  }
  .labelText-0-2-4 {
    font-size: 14px;
    font-family: Roboto, Arial;
    font-weight: 400;
    line-height: 1.5;
    letter-spacing: 0.22px;
  }
  .checkbox-d0-0-2-5 {  }
  .checkbox-d0-0-2-5:checked {
    background-color: #f4ab34;
    border: 2px solid #f4ab34;
  }
  .checkbox-d0-0-2-5:checked:after {
    content: \\"\\";
  }
  .labelText-d1-0-2-6 {
    color: #363636;
  }",
  <div>
    <div
      class=" container-0-2-1 Checkbox-gaya"
    >
      <div
        class="wrapper-0-2-8 wrapper-d0-0-2-13"
        data-testid="ripple-wrapper"
        tabindex="0"
      >
        <div
          class="rippleContainer-0-2-10 rippleContainer-d2-0-2-15"
        >
          <div
            class="ripple-0-2-9 ripple-d1-0-2-14 "
            data-testid="ripple-animation"
          />
        </div>
        <div
          class="wrapper-0-2-2"
        >
          <input
            class="checkbox-0-2-3 checkbox-d0-0-2-5"
            data-testid="ds-checkbox-any"
            id="any"
            type="checkbox"
            value="any value"
          />
        </div>
      </div>
      <label
        class="labelText-0-2-4 labelText-d1-0-2-6 labelContainer-0-2-17"
        for="any"
      >
        something
      </label>
    </div>
  </div>,
]
`;
